fixing phone number and v-aligning center for prices

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -73,4 +73,10 @@ tbody, td, tfoot, th, thead, tr {
 .col {
     padding-right: 0em;
     padding-left: 0em;
+    
+}
+
+tr {
+    display: flex;
+    align-items: center;
 }
